...
      </View>
      <UiButton
        accessibilityLabel="Open Settings"
        label="⚙"
        onPress={onPressSettings}
        style={styles.settingsButton}
        testID="top-level-settings-button"
        textStyle={styles.settingsButtonText}
        variant="secondary"
      />
    </UiSurface>
  );
}
...
